--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>PARGA YÖNETİM</title>
-  <meta content="" name="description">
-  <!-- <meta
-    content="apartman yönetimi, apartman yöneticiliği, apartman yöneticisi, profesyonel apartman yöneticiliği, yönetim, yönetimi, yöneticilik, yönetimi, apartman yönetim şirketi"
-    name="keywords"> -->
+
   <meta name="description"
     content="apartman yönetimi, apartman yöneticiliği, apartman yöneticisi, profesyonel apartman yöneticiliği, yönetim, yönetimi, yöneticilik, yönetimii apartman yönetim şirketi">
   <meta name="keywords"
@@ -349,7 +346,7 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Ahmet Urgancı İş Merkezi - Güngören</h4>
               <p></p>
@@ -359,7 +356,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Alper İş Merkezi.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Alper İş Merkezi.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Alper İş Merkezi - Beşiktaş</h4>
               <p></p>
@@ -369,7 +366,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Savaş.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Savaş.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Savaş İş Merkezi - Bahçelievler</h4>
               <p></p>
@@ -379,7 +376,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/RAFTOZ ARGUN.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/RAFTOZ ARGUN.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Raftoz Argun Sitesi - Bahçelievler</h4>
               <p></p>
@@ -389,7 +386,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/ozerapt.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/ozerapt.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Özer Apartmanı - Esenyurt</h4>
               <p></p>
@@ -399,7 +396,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/BEYAZSARAY.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/BEYAZSARAY.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Beyaz Saray Apartmanı - Esenyurt</h4>
               <p></p>
@@ -409,7 +406,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/LİMANOĞLU.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/LİMANOĞLU.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Limanoğlu Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -419,7 +416,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Yaşar Apartmanı.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Yaşar Apartmanı.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Yaşar Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -429,7 +426,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/bengisuevleri.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/bengisuevleri.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Bengisu Evleri B Blok - Kağıthane</h4>
               <p></p>
@@ -439,7 +436,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KARACAOĞLU.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/KARACAOĞLU.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Karacaoğlu Apartmanı - Kağıthane</h4>
               <p></p>
@@ -449,7 +446,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Salihzekiapt.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Salihzekiapt.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Salih Zeki Apartmanı - Beyoğlu</h4>
               <p></p>
@@ -459,7 +456,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/hilal apartmanı.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/hilal apartmanı.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Hilal Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -469,7 +466,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Kılıçlar Apartmanı.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Kılıçlar Apartmanı.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Kılıçlar Apartmanı - Esenyurt</h4>
               <p></p>
@@ -479,7 +476,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/aysehanım.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/aysehanım.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Ayşe Hanım Apartmanı - Kağıthane</h4>
               <p></p>
@@ -489,7 +486,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/özdağ.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/özdağ.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Özdağ Apartmanı - Avcılar</h4>
               <p></p>
@@ -499,7 +496,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/İMTAŞ.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/İMTAŞ.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>İmtaş Apartmanı - Kağıthane</h4>
               <p></p>
@@ -509,7 +506,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Tenten.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Tenten.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Tenten Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -519,7 +516,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/ÇAKMAK APARTMANI.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/ÇAKMAK APARTMANI.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Çakmak Apartmanı - Esenyurt</h4>
               <p></p>
@@ -529,7 +526,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/GÜL APARTMANI.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/GÜL APARTMANI.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Gül Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -539,7 +536,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Kızılay.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Kızılay.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Kızılay Apartmanı - Şişli</h4>
               <p></p>
@@ -550,7 +547,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/yıldızapartmanı.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/yıldızapartmanı.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Yıldız Apartmanı - Avcılar</h4>
               <p></p>
@@ -560,7 +557,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KARANFİL APARTMANI.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/KARANFİL APARTMANI.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Karanfil Apartmanı - Kağıthane</h4>
               <p></p>
@@ -570,7 +567,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/BİRLİK APARTMANI.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/BİRLİK APARTMANI.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Birlik Apartmanı - Bahçelievler</h4>
               <p></p>
@@ -580,7 +577,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KEREM APARTMANI.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/KEREM APARTMANI.png" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Kerem Apartmanı - Şişli</h4>
               <p></p>
@@ -590,7 +587,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/ALARA APARTMANI.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/ALARA APARTMANI.png" class="img-fluid" loading="lazy" alt="">
             <div class="portfolio-info">
               <h4>Alara Apartmanı - Esenyurt</h4>
               <p></p>
@@ -600,7 +597,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/güney inci.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/güney inci.jpg" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Güney İnci Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -610,7 +607,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/günes.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/günes.jpeg" class="img-fluid" alt="" loading="lazy">
             <div class="portfolio-info">
               <h4>Güneş Apartmanı - Esenyurt</h4>
               <p></p>
@@ -1023,7 +1020,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>3k Mühendislik Mekanik</h4>
+                <h4>3K Mühendislik Mekanik</h4>
                 <span>Sıhhi Tesisat ve Mekanik</span>
               </div>
             </div>
@@ -1064,6 +1061,8 @@
               </div>
             </div>
           </div>
+
+
 
 
           <!--  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
