--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1> <strong>PARGA</strong></h1>
+      <!-- <h1> <strong>PARGA</strong></h1>
       <h2>Apartman ve Site Yönetimi</h2>
-      <h2>Müthiş hizmeti sunmak için dinamik ekibimizle hizmetinizdeyiz</h2>
+      <h2>Müthiş hizmeti sunmak için dinamik ekibimizle hizmetinizdeyiz</h2> -->
       <!-- <h2> <a class="a" href="#sss"> <strong>Yaşam alanınızdaki tamir ve arıza gibi sorunları hızlıca çözüyoruz ve
             şirket
             olarak karşılıyoruz</strong>
