--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <!-- <h1> <strong>PARGA</strong></h1>
+      <h1> <strong>PARGA</strong></h1>
       <h2>Apartman ve Site Yönetimi</h2>
-      <h2>Müthiş hizmeti sunmak için dinamik ekibimizle hizmetinizdeyiz</h2> -->
-      <!-- <h2> <a class="a" href="#sss"> <strong>Yaşam alanınızdaki tamir ve arıza gibi sorunları hızlıca çözüyoruz ve
+      <h2>Müthiş hizmeti sunmak için dinamik ekibimizle hizmetinizdeyiz</h2>
+      <h2> <a class="a" href="#sss"> <strong>Yaşam alanınızdaki tamir ve arıza gibi sorunları hızlıca çözüyoruz ve
             şirket
             olarak karşılıyoruz</strong>
-        </a></h2> -->
+        </a></h2>
 
       <a href="#about" class="btn-get-started scrollto">Biz kimiz?</a>
     </div>
