--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
             <div class="portfolio-info">
               <h4>İmtaş Apartmanı - Kağıthane</h4>
               <p></p>
-              <a href="assets/img/portfolio/İMTAŞ.png.png" data-gallery="portfolioGallery"
+              <a href="assets/img/portfolio/İMTAŞ.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="İmtaş Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
