--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PARGA YÖNETİM</title>
+  <title>Profesyonel Apartman ve Site Yönetimi Hizmeti | Parga Yönetim</title>
 
   <meta name="description"
     content="apartman yönetimi, apartman yöneticiliği, apartman yöneticisi, profesyonel apartman yöneticiliği, yönetim, yönetimi, yöneticilik, yönetimii apartman yönetim şirketi">
@@ -57,7 +57,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="www.pargayonetim.com">PARGA YÖNETİM</a></h1>
+      <h2 class="logo"><a href="#hero">PARGA YÖNETİM</a></h2>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -97,9 +97,12 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1> <strong>PARGA</strong></h1>
-      <h2>Apartman ve Site Yönetimi</h2>
-      <h2>Müthiş hizmeti sunmak için dinamik ekibimizle hizmetinizdeyiz</h2>
+      <h1><strong>Profesyonel Apartman ve Site Yönetimi
+        </strong></h1>
+      <h2>Kat mülkiyeti kanununa uygun biçimde, toplu yaşam alanlarındaki kat maliklerine şeffaf ve profesyonel yönetimi
+        uygun fiyata
+        sunuyoruz</h2>
+
       <h2> <a class="a" href="#sss"> <strong>Yaşam alanınızdaki tamir ve arıza gibi sorunları hızlıca çözüyoruz ve
             şirket
             olarak karşılıyoruz</strong>
@@ -160,7 +163,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bxs-school"></i></div>
-              <h4 class="title"><a href="">Apartman ve Site Yönetimi</a></h4>
+              <h4 class="title"><a href="#">Apartman ve Site Yönetimi</a></h4>
               <p class="description">Yaşam alanınızdaki her şeyden bizler sorumluyuz ve bunun için minnettarız.</p>
             </div>
           </div>
@@ -168,7 +171,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-money-withdraw"></i></div>
-              <h4 class="title"><a href="">Muhasebe</a></h4>
+              <h4 class="title"><a href="#">Muhasebe</a></h4>
               <p class="description">Mali işlerinizi bizler yürütüyoruz ve güveniniz için minnettarız.</p>
             </div>
           </div>
@@ -176,7 +179,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-library"></i></div>
-              <h4 class="title"><a href="">Hukuk</a></h4>
+              <h4 class="title"><a href="#">Hukuk</a></h4>
               <p class="description">Hukukla alakalı bütün ihtiyaçlarınızı memnuniyetle yürütüyor ve bunu, yaşam
                 alanınızın huzurunu bozmadan yapıyoruz.</p>
             </div>
@@ -185,7 +188,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bxs-tree"></i></div>
-              <h4 class="title"><a href="">Temizlik</a></h4>
+              <h4 class="title"><a href="#">Temizlik</a></h4>
               <p class="description">Evinizde görmek istediğiniz temizliği yaşam alanınızın her yanında özenle
                 sağlıyoruz.</p>
             </div>
@@ -193,21 +196,21 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bxs-binoculars"></i></div>
-              <h4 class="title"><a href="">Keşif</a></h4>
+              <h4 class="title"><a href="#">Keşif</a></h4>
               <p class="description">Yaşam alanınınızı yerinde etüd ediyor ve gerekli önerilerde bulunuyoruz.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-been-here"></i></div>
-              <h4 class="title"><a href="">Projelendirme</a></h4>
+              <h4 class="title"><a href="#">Projelendirme</a></h4>
               <p class="description">İşletme bütçenizi ihtiyacınıza göre oluşturuyoruz.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-spreadsheet"></i></div>
-              <h4 class="title"><a href="">Denetim</a></h4>
+              <h4 class="title"><a href="#">Denetim</a></h4>
               <p class="description">Yaşam alanınızın haftalık, aylık denetimlerinizi yapıyoruz ve gördüğümüz eksikleri
                 gideriyoruz.</p>
             </div>
@@ -215,7 +218,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-task"></i></div>
-              <h4 class="title"><a href="">Geliştirme</a></h4>
+              <h4 class="title"><a href="#">Geliştirme</a></h4>
               <p class="description">Yaşam alanınızın eksiklerini görüyor ve gerekli iyileştirmeleri yapıyoruz.</p>
             </div>
           </div>
@@ -1126,7 +1129,7 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Telefon: <a href="tel:+905395733474"><strong> 0546 762 00 02</strong></a> </h4>
+                <h4>Telefon: <a href="tel:+905467620002"><strong> 0546 762 00 02</strong></a> </h4>
 
               </div>
 
@@ -1189,7 +1192,7 @@
               <br>
 
               Şişli / İstanbul <br><br>
-              <strong>Telefon:</strong> <a href="tel:+905395733474">0546 762 00 02</a> <br>
+              <strong>Telefon:</strong> <a href="tel:+905467620002">0546 762 00 02</a> <br>
               <strong>Email: </strong><a href="mailto:info@pargayonetim.com">info@pargayonetim.com</a> <br>
             </p>
           </div>
