--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h2 class="logo"><a href="#hero">PARGA YÖNETİM</a></h2>
+      <h2 class="logo"><a href="#home">PARGA YÖNETİM</a></h2>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Anasayfa</a></li>
+          <li><a class="nav-link scrollto active" href="#home">Anasayfa</a></li>
           <li><a class="nav-link scrollto" href="#about">Biz kimiz?</a></li>
           <li><a class="nav-link scrollto" href="#services">Hizmetlerimiz</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Referanslarımız</a></li>
@@ -95,7 +95,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero">
+  <section id="home">
     <div class="hero-container">
       <h1><strong>Profesyonel Apartman ve Site Yönetimi
         </strong></h1>
