--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <link rel="canonical" href="https://www.pargayonetim.com/" />
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JSMMXR6B8S"></script>
   <script>
@@ -14,12 +16,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Profesyonel Apartman ve Site Yönetimi Hizmeti | Parga Yönetim</title>
+  <title>Profesyonel Apartman Yönetim Şirketi</title>
 
   <meta name="description"
-    content="apartman yönetimi, apartman yöneticiliği, apartman yöneticisi, profesyonel apartman yöneticiliği, yönetim, yönetimi, yöneticilik, yönetimii apartman yönetim şirketi">
+    content="Profesyonel apartman yönetimi şirketi ve profesyonel bina yönetimi firması, profesyonel site yönetimi">
   <meta name="keywords"
-    content="apartman yönetimi, apartman yöneticiliği, apartman yöneticisi, profesyonel apartman yöneticiliği, yönetim, yönetimi, yöneticilik, yönetimi, apartman yönetim şirketi">
+    content="apartman yönetimi, apartman yönetimi firmaları, bina yönetimi firmaları, apartman yönetim şirketi">
   <meta name="page-topic" content="trade">
   <meta http-equiv="Content-Language" content="tr">
   <!-- Favicons -->
@@ -97,9 +99,10 @@
   <!-- ======= Hero Section ======= -->
   <section id="home">
     <div class="hero-container">
-      <h1><strong>Profesyonel Apartman ve Site Yönetimi
+      <h1><strong>Profesyonel Apartman Yönetim şirketi ve Site Yönetimi
         </strong></h1>
-      <h2>Kat mülkiyeti kanununa uygun biçimde, toplu yaşam alanlarındaki kat maliklerine şeffaf ve profesyonel yönetimi
+      <h2>Kat mülkiyeti kanununa uygun biçimde, toplu yaşam alanlarındaki kat maliklerine ve sakinlerine, şeffaf ve
+        profesyonel yönetimi
         uygun fiyata
         sunuyoruz</h2>
 
@@ -130,17 +133,18 @@
               Parga Yönetim olarak bizler:
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Dürüst</li>
-              <li><i class="ri-check-double-line"></i> Hızlı</li>
-              <li><i class="ri-check-double-line"></i> Çözüm odaklı</li>
-              <li><i class="ri-check-double-line"></i> Uygun fiyatlı</li>
+              <li><i class="ri-check-double-line"></i>Dürüst</li>
+              <li><i class="ri-check-double-line"></i>Hızlı</li>
+              <li><i class="ri-check-double-line"></i>Çözüm odaklı</li>
+              <li><i class="ri-check-double-line"></i>Uygun fiyatlı</li>
             </ul>
 
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>Yaşam alanınıza dürüst, düzenli ve sorunları çözen bir firma lazımsa doğru yerdesiniz. Mülk yönetimi,
-              muhasebe, hukuk, temizlik gibi apartman ve site yönetimini kapsayan bütün görevleri basit, adil ve kavga
-              gürültü yaratmadan yürütüyoruz. Tecrübeli ve dinamiğiz. Telefonlarımız 7/24 açık. </p>
+            <p>Yaşam alanınıza dürüst, düzenli ve sorunları çözen bir yönetim firması lazımsa doğru yerdesiniz. Apartman
+              yönetimi, bina yönetimi, site yönetimi ve iş merkezi yönetimi; muhasebe, hukuk, temizlik gibi yaşam
+              alanlarını kapsayan yöneticilik görevlerini basit, adil ve kavgasız yürütüyoruz. Tecrübeli ve dinamiğiz.
+              Telefonlarımız 7/24 açık.</p>
 
             <a href="#contact" class="btn-learn-more">İletişim</a>
           </div>
@@ -349,7 +353,8 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/Ahmet-Urgancı-Cephe.png" class="img-fluid" alt="iş merkezi yönetimi"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Ahmet Urgancı İş Merkezi - Güngören</h4>
               <p></p>
@@ -359,7 +364,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Alper İş Merkezi.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/Alper İş Merkezi.png" class="img-fluid" alt="iş merkezi yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Alper İş Merkezi - Beşiktaş</h4>
               <p></p>
@@ -369,7 +375,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/Savaş.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/Savaş.png" class="img-fluid" alt="iş merkezi yönetimi" loading="lazy">
             <div class="portfolio-info">
               <h4>Savaş İş Merkezi - Bahçelievler</h4>
               <p></p>
@@ -379,7 +385,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/RAFTOZ ARGUN.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/RAFTOZ ARGUN.png" class="img-fluid" alt="site yönetimi" loading="lazy">
             <div class="portfolio-info">
               <h4>Raftoz Argun Sitesi - Bahçelievler</h4>
               <p></p>
@@ -389,7 +395,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/ozerapt.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/ozerapt.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Özer Apartmanı - Esenyurt</h4>
               <p></p>
@@ -399,7 +405,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/BEYAZSARAY.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/BEYAZSARAY.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Beyaz Saray Apartmanı - Esenyurt</h4>
               <p></p>
@@ -409,7 +415,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/LİMANOĞLU.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/LİMANOĞLU.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Limanoğlu Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -419,7 +425,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Yaşar Apartmanı.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/Yaşar Apartmanı.png" class="img-fluid" alt="bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Yaşar Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -429,7 +436,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/bengisuevleri.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/bengisuevleri.png" class="img-fluid" alt="bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Bengisu Evleri B Blok - Kağıthane</h4>
               <p></p>
@@ -439,7 +447,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KARACAOĞLU.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/KARACAOĞLU.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Karacaoğlu Apartmanı - Kağıthane</h4>
               <p></p>
@@ -449,7 +457,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Salihzekiapt.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/Salihzekiapt.png" class="img-fluid" alt="bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Salih Zeki Apartmanı - Beyoğlu</h4>
               <p></p>
@@ -459,7 +468,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/hilal apartmanı.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/hilal apartmanı.png" class="img-fluid" alt="bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Hilal Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -469,7 +479,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Kılıçlar Apartmanı.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/Kılıçlar Apartmanı.png" class="img-fluid" alt="bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Kılıçlar Apartmanı - Esenyurt</h4>
               <p></p>
@@ -479,7 +490,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/aysehanım.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/aysehanım.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Ayşe Hanım Apartmanı - Kağıthane</h4>
               <p></p>
@@ -489,7 +500,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/özdağ.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/özdağ.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Özdağ Apartmanı - Avcılar</h4>
               <p></p>
@@ -499,7 +510,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/İMTAŞ.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/İMTAŞ.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>İmtaş Apartmanı - Kağıthane</h4>
               <p></p>
@@ -509,7 +520,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Tenten.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/Tenten.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Tenten Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -519,7 +530,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/ÇAKMAK APARTMANI.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/ÇAKMAK APARTMANI.png" class="img-fluid" alt="bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Çakmak Apartmanı - Esenyurt</h4>
               <p></p>
@@ -529,7 +541,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/GÜL APARTMANI.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/GÜL APARTMANI.png" class="img-fluid" alt="bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Gül Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -539,7 +552,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Kızılay.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/Kızılay.png" class="img-fluid" alt="bina yönetim firması" loading="lazy">
             <div class="portfolio-info">
               <h4>Kızılay Apartmanı - Şişli</h4>
               <p></p>
@@ -550,7 +563,8 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/yıldızapartmanı.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/yıldızapartmanı.png" class="img-fluid" alt="bina yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Yıldız Apartmanı - Avcılar</h4>
               <p></p>
@@ -560,7 +574,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KARANFİL APARTMANI.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/KARANFİL APARTMANI.png" class="img-fluid" alt="apartman yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Karanfil Apartmanı - Kağıthane</h4>
               <p></p>
@@ -570,7 +585,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/BİRLİK APARTMANI.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/BİRLİK APARTMANI.png" class="img-fluid" alt="apartman yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Birlik Apartmanı - Bahçelievler</h4>
               <p></p>
@@ -580,7 +596,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/KEREM APARTMANI.png" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/KEREM APARTMANI.png" class="img-fluid" alt="apartman yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Kerem Apartmanı - Şişli</h4>
               <p></p>
@@ -590,7 +607,8 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/ALARA APARTMANI.png" class="img-fluid" loading="lazy" alt="">
+            <img src="assets/img/portfolio/ALARA APARTMANI.png" class="img-fluid" loading="lazy"
+              alt="apartman yönetim firması">
             <div class="portfolio-info">
               <h4>Alara Apartmanı - Esenyurt</h4>
               <p></p>
@@ -600,7 +618,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/güney inci.jpg" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/güney inci.jpg" class="img-fluid" alt="apartman yönetimi" loading="lazy">
             <div class="portfolio-info">
               <h4>Güney İnci Apartmanı - Küçükçekmece</h4>
               <p></p>
@@ -610,7 +628,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/günes.jpeg" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/portfolio/günes.jpeg" class="img-fluid" alt="apartman yönetimi" loading="lazy">
             <div class="portfolio-info">
               <h4>Güneş Apartmanı - Esenyurt</h4>
               <p></p>
