--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="home">
     <div class="hero-container">
-      <h1><strong>Profesyonel Apartman Yönetim şirketi ve Site Yönetimi
-        </strong></h1>
+
+      <h1>Profesyonel Apartman Yönetim Şirketi ve Site Yönetimi
+      </h1>
       <h2>Kat mülkiyeti kanununa uygun biçimde, toplu yaşam alanlarındaki kat maliklerine ve sakinlerine, şeffaf ve
         profesyonel yönetimi
         uygun fiyata
