--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         <div class="section-title">
           <h2>Hizmetlerimiz</h2>
-          <h3>Sunduğumuz harika <span>hizmetler</span></h3>
+          <h3>Sunduğumuz Harika <span>Hizmetler</span></h3>
           <!-- <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p> -->
         </div>
 
@@ -169,7 +169,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxs-school"></i></div>
               <h4 class="title"><a href="#">Apartman ve Site Yönetimi</a></h4>
-              <p class="description">Yaşam alanınızdaki her şeyden bizler sorumluyuz ve bunun için minnettarız.</p>
+              <h2 class="description">Yaşam alanınızdaki her şeyden bizler sorumluyuz ve bunun için minnettarız.</h2>
             </div>
           </div>
 
