--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <title>Profesyonel Apartman Yönetim Şirketi</title>
+
   <link rel="canonical" href="https://www.pargayonetim.com/" />
 
   <!-- Google tag (gtag.js) -->
@@ -16,7 +18,6 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Profesyonel Apartman Yönetim Şirketi</title>
 
   <meta name="description"
     content="Profesyonel apartman yönetimi şirketi ve profesyonel bina yönetimi firması, profesyonel site yönetimi">
@@ -60,6 +61,9 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <h2 class="logo"><a href="#home">PARGA YÖNETİM</a></h2>
+      <h2 class="logo"><a href="tel:+905467620002">0546 762 00 02</a></h2>
+
+
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
